[gd_scene load_steps=6 format=3 uid="uid://ccqoreueuxdb7"]

[ext_resource type="Script" path="res://HUD.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cit6gwe5px1q8" path="res://fonts/Xolonium-Regular.ttf" id="2_2jm3i"]
[ext_resource type="Texture2D" uid="uid://liqeeoe8cfj8" path="res://art/Control.png" id="3_l17ni"]

[sub_resource type="InputEventAction" id="InputEventAction_fopy7"]
action = &"start_game"

[sub_resource type="Shortcut" id="4"]
events = [SubResource("InputEventAction_fopy7")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_2jm3i")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -78.0
offset_right = 1.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2jm3i")
theme_override_font_sizes/font_size = 60
text = "Dodge the
Ghost"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -283.0
offset_right = 94.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_2jm3i")
theme_override_font_sizes/font_size = 60
shortcut = SubResource("4")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="Button_Down" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(292.47, 720)
rotation = -1.5708
scale = Vector2(0.289183, -0.376844)
texture_normal = ExtResource("3_l17ni")
action = "move_down"

[node name="Button_Up" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(298, 525)
rotation = 1.5708
scale = Vector2(0.25021, 0.42)
texture_normal = ExtResource("3_l17ni")
action = "move_up"

[node name="Button_Left" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(65, 576)
scale = Vector2(0.363889, 0.338235)
texture_normal = ExtResource("3_l17ni")
action = "move_left"

[node name="Button_Right" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(420, 676)
rotation = 3.14159
scale = Vector2(0.358333, 0.415441)
texture_normal = ExtResource("3_l17ni")
action = "move_right"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
